--- a/home/newIndex.html
+++ b/home/newIndex.html
@@ -47,7 +47,9 @@
     </header>
     <main>
         <section class="section-1">
-            <h1>Streamline Your Workflow with Our Comprehensive Contract Management System</h1>
+            <h1>Streamline Your Workflow with Our<br/>
+                 Comprehensive Contract Management<br/>
+                  System</h1>
             <article class="services">
                 <section class="card">
                     <article class="feature-icon">
@@ -56,6 +58,7 @@
                     <article class="content">
                         <h4>Experience Hassle-Free Transactions with Our Secure Payment Solutions</h4>
                         <p>Easily create, manage, and store contracts all in one<br/> place.</p>
+                        <a href="#">Learn more →</a>
                     </article>
                 </section>
 
@@ -66,6 +69,7 @@
                     <article class="content">
                         <h4>Keep Projects on Track with Our Real-Time Project Tracking Tools</h4>
                         <p>Monitor progress and deadlines to ensure timely<br/> project completion.</p>
+                        <a href="#">Sign Up →</a>
                     </article>
                 </section>
 
@@ -76,8 +80,40 @@
                     <article class="content">
                         <h4>Simplify Your Payment Process with Our User-Friendly Payment Features</h4>
                         <p>Make secure payments and manage invoices<br/> effortlessly.</p>
+                        <a href="#">Learn more →</a>
                     </article>
                 </section>
+            </article>
+        </section>
+    </main>
+
+    <main>
+        <section class="section-2">
+            <article class="article left-article">
+                <section class="top-text">
+                    <p class="top">Empower</p>
+                    <h1>Unlock Seamless<br/>
+                    Collaboration for<br/>
+                    Freelancers and Clients</h1>
+                    <p class="bottom">Our platform simplifies the way freelancers and clients work together. Enjoy<br/>
+                    streamlined contracts, secure payments, and real-time project tracking</p>
+
+                    <section class="lists">
+                        <ul>
+                            <li><p>Effortless contract management for every project</p></li>
+                            <li><p>Instant payment processing for timely rewards</p></li>
+                            <li><p>Track progress and communicate in real-time</p></li>
+                        </ul>
+                    </section>
+
+                    <section class="cta">
+                        <button class="sign-up">Sign up →</button>
+                    </section>
+                </section>
+                
+            </article>
+            <article class="article right-article">
+                <img src="/kaleidico-3V8xo5Gbusk-unsplash.jpg" id="banner"/>
             </article>
         </section>
     </main>
